Move MiiData to its own namespace and add ChecksummedMiiData (#6824)
* Move mii to own namespace and add checksummed mii data

* Fix compile issues

* Make mii classes trivial and add cast operator

* Fix Android side

* Add new line at the end of files.

* Make miidata a struct and crc16 a u32_be as per switch code.

* Apply suggestions

* Change back crc to u16 and set padding to 0.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -184,6 +184,8 @@ add_library(citra_core STATIC
     hle/kernel/wait_object.h
     hle/lock.cpp
     hle/lock.h
+    hle/mii.h
+    hle/mii.cpp
     hle/result.h
     hle/romfs.cpp
     hle/romfs.h
