--- a/src/network/CMakeLists.txt
+++ b/src/network/CMakeLists.txt
@@ -19,14 +19,14 @@ add_library(network STATIC
 create_target_directory_groups(network)
 
 if (ENABLE_WEB_SERVICE)
-    target_compile_definitions(network PRIVATE -DENABLE_WEB_SERVICE -DCPPHTTPLIB_OPENSSL_SUPPORT)
-    target_link_libraries(network PRIVATE web_service httplib)
+    target_compile_definitions(network PRIVATE -DENABLE_WEB_SERVICE)
+    target_link_libraries(network PRIVATE web_service)
     if (ANDROID)
         target_link_libraries(network PRIVATE ifaddrs)
     endif()
 endif()
 
-target_link_libraries(network PRIVATE citra_common enet Boost::serialization)
+target_link_libraries(network PRIVATE citra_common enet Boost::serialization httplib)
 set_target_properties(network PROPERTIES INTERPROCEDURAL_OPTIMIZATION ${ENABLE_LTO})
 
 if (CITRA_USE_PRECOMPILED_HEADERS)
