build: Expose ENABLE_SCRIPTING and ENABLE_WEB_SERVICE flags as public. (#6872)

--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -201,6 +201,7 @@ target_link_libraries(httplib INTERFACE ${OPENSSL_LIBRARIES})
 
 if(ANDROID)
     add_subdirectory(android-ifaddrs)
+    target_link_libraries(httplib INTERFACE ifaddrs)
 endif()
 
 # cpp-jwt
