savestates: save the build name to be displayed when there's a version mismatch (#6493)
* savestates: add a build_name field to the header

* savestates: display build name on save/load menu

* savestates: add zero member to header just in case of UB from an older save state

* savestates: add legacy hash lookup

* savestate_data: update hash database

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -463,6 +463,7 @@ add_library(citra_core STATIC
     precompiled_headers.h
     savestate.cpp
     savestate.h
+    savestate_data.h
     system_titles.cpp
     system_titles.h
     telemetry_session.cpp
