--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: citra-ci
+name: citra-build
 
 on:
   push:
@@ -8,19 +8,6 @@ on:
     branches: [ master ]
 
 jobs:
-  clang-format:
-    runs-on: ubuntu-latest
-    container: 
-      image: citraemu/build-environments:linux-fresh
-      options: -u 1001
-    steps:
-      - uses: actions/checkout@v3
-        with: 
-          fetch-depth: 0
-      - name: Build
-        env:
-          COMMIT_RANGE: ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}
-        run: ./.ci/clang-format.sh
   source:
     if: ${{ !github.head_ref }}
     runs-on: ubuntu-latest
@@ -269,19 +256,6 @@ jobs:
         run: brew install ccache glslang ninja
       - name: Build
         run: ./.ci/ios.sh
-  transifex:
-    runs-on: ubuntu-latest
-    container: citraemu/build-environments:linux-fresh
-    if: ${{ github.repository == 'citra-emu/citra' && !github.head_ref }}
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: recursive
-          fetch-depth: 0
-      - name: Update Translation
-        run: ./.ci/transifex.sh
-        env:
-          TX_TOKEN: ${{ secrets.TRANSIFEX_API_TOKEN }}
   release:
     runs-on: ubuntu-latest
     needs: [windows, linux, macos-universal, android, source]
