externals: mark cpp-jwt headers as SYSTEM (#7033)

--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -216,7 +216,7 @@ if (ENABLE_WEB_SERVICE)
         target_link_libraries(cpp-jwt INTERFACE cpp-jwt::cpp-jwt)
     else()
         add_library(cpp-jwt INTERFACE)
-        target_include_directories(cpp-jwt INTERFACE ./cpp-jwt/include)
+        target_include_directories(cpp-jwt SYSTEM INTERFACE ./cpp-jwt/include)
         target_compile_definitions(cpp-jwt INTERFACE CPP_JWT_USE_VENDORED_NLOHMANN_JSON)
     endif()
 endif()
