externals: require cpp-httplib >= 0.14.1 (#7043)

--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -209,8 +209,13 @@ endif()
 # httplib
 add_library(httplib INTERFACE)
 if(USE_SYSTEM_CPP_HTTPLIB)
-    find_package(CppHttp REQUIRED)
-    target_link_libraries(httplib INTERFACE cpp-httplib::cpp-httplib)
+    find_package(CppHttp 0.14.1)
+    if(CppHttp_FOUND)
+        target_link_libraries(httplib INTERFACE cpp-httplib::cpp-httplib)
+    else()
+        message(STATUS "Cpp-httplib not found or not suitable version! Falling back to bundled...")
+        target_include_directories(httplib INTERFACE ./httplib)
+    endif()
 else()
     target_include_directories(httplib INTERFACE ./httplib)
 endif()
