externals: allow user to use system fmt (#7052)

--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -68,8 +68,15 @@ target_include_directories(dds-ktx INTERFACE ./dds-ktx)
 
 # fmt and Xbyak need to be added before dynarmic
 # libfmt
-option(FMT_INSTALL "" ON)
-add_subdirectory(fmt EXCLUDE_FROM_ALL)
+if(USE_SYSTEM_FMT)
+    add_library(fmt INTERFACE)
+    find_package(fmt REQUIRED)
+    target_link_libraries(fmt INTERFACE fmt::fmt)
+else()
+    option(FMT_INSTALL "" ON)
+    add_subdirectory(fmt EXCLUDE_FROM_ALL)
+endif()
+
 
 # Xbyak
 if ("x86_64" IN_LIST ARCHITECTURE)
