--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -97,6 +97,7 @@ if ("x86_64" IN_LIST ARCHITECTURE OR "arm64" IN_LIST ARCHITECTURE)
     else()
         set(DYNARMIC_TESTS OFF CACHE BOOL "")
         set(DYNARMIC_FRONTENDS "A32" CACHE STRING "")
+        set(DYNARMIC_USE_PRECOMPILED_HEADERS ${CITRA_USE_PRECOMPILED_HEADERS} CACHE BOOL "")
         add_subdirectory(dynarmic EXCLUDE_FROM_ALL)
     endif()
 endif()
@@ -293,6 +294,6 @@ if (APPLE)
 endif()
 
 # adrenotools
-if (ANDROID)
+if (ANDROID AND "arm64" IN_LIST ARCHITECTURE)
     add_subdirectory(libadrenotools)
 endif()
