--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -218,7 +218,7 @@ if (NOT OPENSSL_FOUND)
     set(LIBRESSL_SKIP_INSTALL ON CACHE BOOL "")
     set(OPENSSLDIR "/etc/ssl/")
     add_subdirectory(libressl EXCLUDE_FROM_ALL)
-    target_include_directories(ssl INTERFACE ./libressl/include)
+    target_include_directories(ssl SYSTEM INTERFACE ./libressl/include)
     target_compile_definitions(ssl PRIVATE -DHAVE_INET_NTOP)
     get_directory_property(OPENSSL_LIBRARIES
         DIRECTORY libressl
@@ -230,13 +230,13 @@ add_library(httplib INTERFACE)
 if(USE_SYSTEM_CPP_HTTPLIB)
     find_package(CppHttp 0.14.1)
     if(CppHttp_FOUND)
-        target_link_libraries(httplib INTERFACE cpp-httplib::cpp-httplib)
+        target_link_libraries(httplib SYSTEM INTERFACE cpp-httplib::cpp-httplib)
     else()
         message(STATUS "Cpp-httplib not found or not suitable version! Falling back to bundled...")
-        target_include_directories(httplib INTERFACE ./httplib)
+        target_include_directories(httplib SYSTEM INTERFACE ./httplib)
     endif()
 else()
-    target_include_directories(httplib INTERFACE ./httplib)
+    target_include_directories(httplib SYSTEM INTERFACE ./httplib)
 endif()
 target_compile_options(httplib INTERFACE -DCPPHTTPLIB_OPENSSL_SUPPORT)
 target_link_libraries(httplib INTERFACE ${OPENSSL_LIBRARIES})
