--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -230,7 +230,7 @@ add_library(httplib INTERFACE)
 if(USE_SYSTEM_CPP_HTTPLIB)
     find_package(CppHttp 0.14.1)
     if(CppHttp_FOUND)
-        target_link_libraries(httplib SYSTEM INTERFACE cpp-httplib::cpp-httplib)
+        target_link_libraries(httplib INTERFACE httplib::httplib)
     else()
         message(STATUS "Cpp-httplib not found or not suitable version! Falling back to bundled...")
         target_include_directories(httplib SYSTEM INTERFACE ./httplib)
