--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -150,7 +150,37 @@ endif()
 add_subdirectory(open_source_archives)
 
 # Dynamic library headers
-add_subdirectory(library-headers EXCLUDE_FROM_ALL)
+add_library(library-headers INTERFACE)
+
+if (USE_SYSTEM_FDK_AAC_HEADERS)
+    find_path(SYSTEM_FDK_AAC_INCLUDES NAMES fdk-aac/aacdecoder_lib.h)
+    if (SYSTEM_FDK_AAC_INCLUDES STREQUAL "SYSTEM_FDK_AAC_INCLUDES-NOTFOUND")
+        message(WARNING "System fdk-aac headers not found. Falling back on bundled headers.")
+    else()
+        message(STATUS "Using system fdk_aac headers.")
+        target_include_directories(library-headers SYSTEM INTERFACE ${SYSTEM_FDK_AAC_INCLUDES})
+        set(FOUND_FDK_AAC_HEADERS ON)
+    endif()
+endif()
+if (NOT FOUND_FDK_AAC_HEADERS)
+    message(STATUS "Using bundled fdk_aac headers.")
+    target_include_directories(library-headers SYSTEM INTERFACE ./library-headers/fdk-aac/include)
+endif()
+
+if (USE_SYSTEM_FFMPEG_HEADERS)
+    find_path(SYSTEM_FFMPEG_INCLUDES NAMES libavutil/avutil.h)
+    if (SYSTEM_FFMPEG_INCLUDES STREQUAL "SYSTEM_FFMPEG_INCLUDES-NOTFOUND")
+        message(WARNING "System FFmpeg headers not found. Falling back on bundled headers.")
+    else()
+        message(STATUS "Using system FFmpeg headers.")
+        target_include_directories(library-headers SYSTEM INTERFACE ${SYSTEM_FFMPEG_INCLUDES})
+        set(FOUND_FFMPEG_HEADERS ON)
+    endif()
+endif()
+if (NOT FOUND_FFMPEG_HEADERS)
+    message(STATUS "Using bundled ffmpeg headers.")
+    target_include_directories(library-headers SYSTEM INTERFACE ./library-headers/ffmpeg/include)
+endif()
 
 # SoundTouch
 if(NOT USE_SYSTEM_SOUNDTOUCH)
